[package]
name = "wget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking"] }
http = "0.2"
error-chain = "0.12.4"
tempfile = "3"
indicatif = "0.17"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]